tests/diagnostics/catalog/snapshots/ir/IR0062.snap
error[IR0062]: IR_E_UNKNOWN_NAME
 --> tests/diagnostics/catalog/sources/ir/IR0062.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0062
  = help: keep IR validation diagnostics structured and catalog-backed
